--- a/libspeedb-sys/Cargo.toml
+++ b/libspeedb-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "librocksdb-sys"
-version = "0.11.0+8.1.1"
+name = "libspeedb-sys"
+version = "0.11.0+2.4.1"
 edition = "2018"
 rust-version = "1.60"
 authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>"]
