--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rocksdb"
+name = "speedb"
 description = "Rust wrapper for Facebook's RocksDB embeddable database"
 version = "0.21.0"
 edition = "2018"
