--- a/librocksdb-sys/Cargo.toml
+++ b/librocksdb-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "librocksdb-sys"
-version = "0.17.0+9.7.3"
+version = "0.17.0+9.0.0"
 edition = "2018"
 rust-version = "1.71.1"
 authors = [
@@ -16,9 +16,11 @@ categories = ["api-bindings", "database", "external-ffi-bindings"]
 links = "rocksdb"
 
 [features]
-default = ["static"]
+default = ["static", "bindgen/runtime"]
 jemalloc = ["tikv-jemalloc-sys"]
 static = ["libz-sys?/static", "bzip2-sys?/static"]
+bindgen-runtime = ["bindgen/runtime"]
+bindgen-static = ["bindgen/static"]
 mt_static = []
 io-uring = ["pkg-config"]
 snappy = []
@@ -43,6 +45,6 @@ uuid = { version = "1.0", features = ["v4"] }
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
-bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
+bindgen = { version = "0.69", default-features = false }
 glob = "0.3"
 pkg-config = { version = "0.3", optional = true }
